alignment issues in container

--- a/public/style-layout.css
+++ b/public/style-layout.css
@@ -2,7 +2,7 @@
 body{
 	font-family: 'Open Sans', sans-serif;
 	display: flex;
-	flex-flow: column;
+	flex-direction: column;
 	align-items: center;
 	background: #BBBBBB;
 	margin: 0;
@@ -12,6 +12,7 @@ body{
 	width: 1000px;
 }
 .contentContainer{
+	flex-direction: row;
 	justify-content: space-between;
 }
 .rowWrapper{
