--- a/public/style.css
+++ b/public/style.css
@@ -27,7 +27,6 @@
 }
 .pageTitle{
 	background-color: #5D5E5E;
-	width: 100%;
 	padding-top: 10px;
 	padding-bottom: 10px;
 	padding-left: 10px;
